[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/inventory/close_info_box_16x17.png" type="Texture" id=2]
[ext_resource path="res://assets/inventory/info_box_64x64.png" type="Texture" id=3]
[ext_resource path="res://scripts/Inventory/InventoryInfoBox.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="InventoryInfoBox" type="Node2D"]
z_index = 2
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 110.0
margin_bottom = 26.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 1 )
text = "Tree Branch"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseInfoBox" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 63.0
margin_right = 40.0
margin_bottom = 80.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UseBt" type="Button" parent="."]
margin_left = 10.0
margin_top = 18.0
margin_right = 98.0
margin_bottom = 38.0
rect_scale = Vector2( 0.5, 0.5 )
disabled = true
text = "Use"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquipBt" type="Button" parent="."]
margin_left = 10.0
margin_top = 32.0
margin_right = 98.0
margin_bottom = 52.0
rect_scale = Vector2( 0.5, 0.5 )
disabled = true
text = "Equip"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropBt" type="Button" parent="."]
margin_left = 10.0
margin_top = 46.0
margin_right = 98.0
margin_bottom = 66.0
rect_scale = Vector2( 0.5, 0.5 )
text = "Drop"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CloseInfoBox" to="." method="_on_CloseInfoBox_pressed"]
[connection signal="pressed" from="UseBt" to="." method="_on_UseBt_pressed"]
[connection signal="pressed" from="DropBt" to="." method="_on_DropBt_pressed"]
